	authorization succeeded.
	(twittering-verify-credentials): return t or nil according to
	whether the authorization succeeded or not.
	(twittering-visit-timeline): open the timeline buffer only if
	authorization succeeded.

	* twittering-mode.el: In `twittering-start', bind a local variable
	only if necessary.
	(twittering-start): bind `action' only if necessary.

2011-06-26  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Revise the routine for the format specifier
	"%C".
	(twittering-make-string-with-uri-property): new function.
	(twittering-generate-formater-for-first-spec): use the function
	`twittering-make-string-with-uri-property' for the format
	specifier "%C".
	(twittering-make-time-string): removed.

	* twittering-mode.el: Add a function to go to the next/previous
	URI explicitly written in a tweet.
	(twittering-make-fontified-tweet-text): add uri-origin property to
	URIs explicitly written in a tweet.
	(twittering-get-next-thing-pos): new function.
	(twittering-goto-next-thing): ignore things except URIs explicitly
	written in a tweet if a prefix argument is given.
	(twittering-goto-previous-thing): likewise.
	(twittering-goto-next-uri): new function.
	(twittering-goto-previous-uri): new function.

	* twittering-mode.el: Wait a moment after finding that the process
	is dead and the query has not been finished. This prevents Emacs
	from canceling the query on the middle of evaluating the
	sentinel.
	(twittering-wait-while): new macro.
	(twittering-oauth-get-token-alist): wait a moment after finding
	that the process is dead and the query has not been finished. This
	prevents Emacs from canceling the query on the middle of
	evaluating the sentinel.
	(twittering-tinyurl-get): likewise.
	(twittering-verify-credentials): likewise.
	(twittering-get-list-sync): likewise.

	* twittering-mode.el: Correctly ensure an available connection
	method even if SSL is unavailable.
	(twittering-ensure-connection-method): return correct value in the